--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -42,7 +42,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Поиск курсов</a>
+              <a class="nav-link" href="{% url 'search-course' %}">Поиск курсов</a>
           </ul>
         </div>
       </div>
