--- a/course/templates/course/delete_page_course.html
+++ b/course/templates/course/delete_page_course.html
@@ -1,10 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<!-- Templates deleting foto -->
+{% extends 'base.html' %}
+{% load bootstrap3 %}
 
-</body>
-</html>
+{% block title %}
+  <title> Удаление курса | Каталог курсов</title>
+{% endblock %}
+
+{% block header %}
+  <h2>Подтверждение удаления курса:</h2>
+{% endblock header %}
+
+
+{% block content %}
+  <form method="post" action="" class="form">
+    {% csrf_token %}
+
+    <div class="panel panel-default">
+        <div class="panel-heading">
+        <h3><p><strong>Название курса:</strong> {{ course.name }}</p></h3>
+        <br>
+          <div class="panel-body">
+            <h3><p><strong>Описание курса:</strong> {{ course.description|linebreaks }}</p>
+            <br>
+            <p><strong>Дата публикации:</strong> {{ course.date_added|date:'d.m.Y, H:i:s' }}</p></h3>
+          </div>
+        </div>
+      </div>
+
+    {% buttons %}
+      <button name="submit" class="btn btn-primary">Удалить</button>
+    {% endbuttons %}
+
+  </form>
+
+{% endblock content %}
