--- a/course/templates/course/home_page_catalog.html
+++ b/course/templates/course/home_page_catalog.html
@@ -27,7 +27,7 @@
 
   <ul>
     {% for course in courses %}
-      <h3><li><a href="#"></a></li></h3>
+      <h3><li><a href="{% url 'select-course' course.id %}">{{ course.name }}</a></li></h3>
     {% empty %}
       <h3><li>Курсов не обнаружено</li></h3>
     {% endfor %}
