--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -61,8 +61,16 @@
 
     <!-- bottom page -->
     <footer class="footer">
-      <br>
-      <h3 align="center"><small>Ваш каталог для хранения курсов и их последующего изучения - 2017"</small></h3>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-10 mx-auto text-center">
+            <hr class="small">
+              <h5><p class="text-muted">Каталог курсов - 2017</p></h5>
+              <br>
+              <br>
+          </div>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
